// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTableRow Admin 1`] = `
<tr
  className="h-20 border-b border-gray-300 bg-white"
  data-test="MembreRow-yolo@dodo.com"
>
  <td
    className="px-4"
  >
    <span
      className="font-bold"
    >
      Dodo
       
      Yolo
    </span>
    <span
      className="block mt-1 text-xs text-gray-500"
    >
      yolo@dodo.com
    </span>
  </td>
  <td
    className="px-4"
  >
    <div
      data-test="fonction-dropdown"
    >
      <button
        aria-expanded={false}
        aria-label="ouvrir le menu"
        className="flex items-center w-full p-2 text-left text-sm"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
      >
        <span
          className="mr-auto flex line-clamp-1"
        >
          Référent·e
        </span>
        <span
          className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
        />
      </button>
    </div>
  </td>
  <td
    className="px-4 pr-0"
  >
    <div
      data-test="champ_intervention-dropdown"
    >
      <button
        aria-expanded={false}
        aria-label="ouvrir le menu"
        className="flex items-center w-full p-2 text-left text-sm"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        type="button"
      >
        <span
          className="mr-auto flex flex-col gap-2"
        >
          <div>
            Climat Air Énergie
          </div>
        </span>
        <span
          className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
        />
      </button>
    </div>
  </td>
  <td
    className="w-96 px-4"
  >
    <div
      className="py-1 px-2 border border-gray-300"
    >
      <textarea
        className="w-full cursor-text resize-none"
        data-test="details_fonction-textarea"
        onBlur={[Function]}
        onChange={[Function]}
        value="Cheffe de projet PCAET"
      />
    </div>
  </td>
  <td
    className="px-4"
  >
    <div
      data-test="acces-dropdown"
    >
      <button
        aria-expanded={false}
        aria-label="ouvrir le menu"
        className="flex items-center w-full p-2 text-left text-sm"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
      >
        <span
          className="mr-auto"
        >
          Admin
        </span>
        <span
          className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
        />
      </button>
    </div>
  </td>
  <td
    className="px-4"
  >
    <span
      className="ri-checkbox-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] bg-success-2 text-success-1 p-2 rounded"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
    />
  </td>
  <td
    className="px-4"
  >
    <button
      className="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 p-2.5"
      data-test="delete"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
    >
      <span
        className="ri-delete-bin-6-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8"
      />
    </button>
  </td>
</tr>
`;

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTableRow Editeur 1`] = `
<tr
  className="h-20 border-b border-gray-300 bg-white"
  data-test="MembreRow-yala@dada.com"
>
  <td
    className="px-4"
  >
    <span
      className="font-bold"
    >
      Dada
       
      Yala
    </span>
    <span
      className="block mt-1 text-xs text-gray-500"
    >
      yala@dada.com
    </span>
  </td>
  <td
    className="px-4"
  >
    <div
      data-test="fonction-dropdown"
    >
      <button
        aria-expanded={false}
        aria-label="ouvrir le menu"
        className="flex items-center w-full p-2 text-left text-sm"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
      >
        <span
          className="mr-auto flex line-clamp-1"
        >
          Équipe technique
        </span>
        <span
          className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
        />
      </button>
    </div>
  </td>
  <td
    className="px-4 pr-0"
  >
    <div
      data-test="champ_intervention-dropdown"
    >
      <button
        aria-expanded={false}
        aria-label="ouvrir le menu"
        className="flex items-center w-full p-2 text-left text-sm"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        type="button"
      >
        <span
          className="mr-auto flex flex-col gap-2"
        >
          <div>
            Climat Air Énergie
          </div>
          <div>
            Économie Circulaire
          </div>
        </span>
        <span
          className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
        />
      </button>
    </div>
  </td>
  <td
    className="w-96 px-4"
  >
    <div
      className="py-1 px-2 border border-gray-300"
    >
      <textarea
        className="w-full cursor-text resize-none"
        data-test="details_fonction-textarea"
        onBlur={[Function]}
        onChange={[Function]}
        value="Vice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier, adjoint au maire en charge du dVice-Président à l'aménagement durable du territoire de la CC du Pays de Château-Gontier"
      />
    </div>
  </td>
  <td
    className="px-4"
  >
    Édition
  </td>
  <td
    className="px-4"
  >
    <span
      className="ri-checkbox-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] bg-success-2 text-success-1 p-2 rounded"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
    />
  </td>
  <td
    className="px-4"
  >
    <button
      className="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 p-2.5"
      data-test="delete"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
    >
      <span
        className="ri-delete-bin-6-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8"
      />
    </button>
  </td>
</tr>
`;

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTableRow Invite 1`] = `
<tr
  className="h-20 border-b border-gray-300 bg-white"
  data-test="MembreRow-invite@dodo.com"
>
  <td
    className="px-4"
    colSpan={4}
  >
    <span
      className="block mb-0.5 text-xs text-gray-500"
    >
      invite@dodo.com
    </span>
    <span
      className="font-medium text-xs text-gray-600"
    >
      Création de compte en attente
    </span>
  </td>
  <td
    className="px-4"
  >
    <span>
      Lecture
    </span>
  </td>
  <td
    className="px-4"
  >
    <span
      className="ri-hourglass-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] bg-warning-2 text-warning-1 p-2 rounded"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
    />
  </td>
  <td
    className="px-4"
  />
</tr>
`;

exports[`Storyshots app/pages/collectivite/Users/components/MembreListTableRow Lecteur 1`] = `
<tr
  className="h-20 border-b border-gray-300 bg-white"
  data-test="MembreRow-john@doe.com"
>
  <td
    className="px-4"
  >
    <span
      className="font-bold"
    >
      Doe
       
      John
    </span>
    <span
      className="block mt-1 text-xs text-gray-500"
    >
      john@doe.com
    </span>
  </td>
  <td
    className="px-4"
  >
    <div
      data-test="fonction-dropdown"
    >
      <button
        aria-expanded={false}
        aria-label="ouvrir le menu"
        className="flex items-center w-full p-2 text-left text-sm"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
      >
        <span
          className="mr-auto flex line-clamp-1"
        >
          Équipe politique
        </span>
        <span
          className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
        />
      </button>
    </div>
  </td>
  <td
    className="px-4 pr-0"
  >
    <div
      data-test="champ_intervention-dropdown"
    >
      <button
        aria-expanded={false}
        aria-label="ouvrir le menu"
        className="flex items-center w-full p-2 text-left text-sm"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        type="button"
      >
        <span
          className="mr-auto flex flex-col gap-2"
        >
          <div>
            Climat Air Énergie
          </div>
        </span>
        <span
          className="fr-fi-arrow-down-s-line mt-1 scale-90 ml-auto"
        />
      </button>
    </div>
  </td>
  <td
    className="w-96 px-4"
  >
    <div
      className="py-1 px-2 border border-gray-300"
    >
      <textarea
        className="w-full cursor-text resize-none"
        data-test="details_fonction-textarea"
        onBlur={[Function]}
        onChange={[Function]}
        value="Consultant assistance à maîtrise d’ouvrage - Bureau d’études Green Planet"
      />
    </div>
  </td>
  <td
    className="px-4"
  >
    Lecture
  </td>
  <td
    className="px-4"
  >
    <span
      className="ri-checkbox-circle-fill font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] bg-success-2 text-success-1 p-2 rounded"
      onBlur={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
    />
  </td>
  <td
    className="px-4"
  >
    <button
      className="w-fit flex items-center border-solid group gap-2 cursor-pointer rounded-lg border font-bold text-primary-7 hover:!text-primary-8 bg-primary-0 hover:!bg-primary-1 border-primary-7 hover:!border-primary-8 p-2.5"
      data-test="delete"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseLeave={[Function]}
      onMouseMove={[Function]}
      onPointerDown={[Function]}
      onPointerEnter={[Function]}
    >
      <span
        className="ri-delete-bin-6-line font-normal text-center h-5 w-5 text-[1.25rem] leading-[1.25rem] fill-primary-7 group-hover:fill-primary-8"
      />
    </button>
  </td>
</tr>
`;
